--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -15,7 +15,7 @@
   --text-color-light: hsl(218, 8%, 54%);
   --white-color: hsl(218, 100%, 98%);
   --white-color-light: hsl(218, 48%, 80%);
-  --dark-color: hsl(152, 80%, 35%);
+  --dark-color: hsl(154, 74%, 6%);
   --gray-color: hsl(0, 0%, 92%);
   --body-color: hsl(0, 0%, 100%);
 
@@ -522,13 +522,194 @@ img {
 
 
 
+
 /*=============== WEBSITE ABOUT ===============*/
+.about__container{
+  /* display: grid;
+  grid-template-columns: repeat(2, 1fr); */
+  background-color: var(--dark-color);
+  padding:3rem 1.5rem 2rem;
+  row-gap: 3rem;
+  border-radius: 2rem;
+  box-shadow: 0 8px 16px hsla(218, 94%, 45%, 0.2);
+
+}
+.about__data{
+  display: grid;
+  row-gap: 3rem;
+}
+
+.about__data .section__title{
+  color:var(--white-color);
+}
+.about__description{
+  color: var(--white-color-light);
+  text-align: center;
+}
+.about__info{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  text-align: center;
+
+}
+.about__number{
+  font-size: var(--h1-font-size);
+  color:var(--white-color);
+  margin-bottom: 0.25rem;
+}
+.about__details{
+  font-size: var(--small-font-size);
+  color: var(--white-color-light);
+}
+.about__stat:not(:last-child){
+  border-inline-end: 2px solid var(--white-color-light);
+
+}
+.about__img{
+  width: 250px;
+  border-radius: 1.5rem;
+  filter: drop-shadow(8 16px 24px hsla(218, 68%, 18%, 0.6));
+  justify-self: center;
+}
+.about__button{
+  color:var(--white-color);
+  display: inline-flex;
+  justify-self: center;
+  align-items: center;
+  column-gap: 0.12rem;
+  margin-bottom: 1.5rem;
+}
+.about__button i{
+  font-size: 1.5rem;
+  transition: transform .4s;
+
+}
+.about__button:hover i{
+  transform: translateX(0.25rem);
+}
 
 
 /*=============== WEBSITE PRICES ===============*/
+.prices__container {
+  padding-bottom: 4rem;
+  row-gap: 5rem;
+}
+
+.prices__content {
+  display: grid;
+  position: relative;
+}
+
+.prices__description {
+  text-align: center;
+  margin-bottom: 1.5rem;
+}
+
+.prices__card {
+  width: 304px;
+  background-color: var(--body-color);
+  box-shadow: 0 4px 16px hsla(218, 68%, 18%, 0.2);
+  border-radius: 1rem;
+}
+
+.prices__heading {
+  background-color: var(--first-color);
+  padding: 1.5rem 1rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 1rem 1rem 0 0;
+}
+.prices__number{
+  font-size: var(--bigger-font-size);
+  color:var(--white-color);
+  margin-bottom: 0.5rem;
+
+}
+.prices__title{
+  font-size: var(--h3-font-size);
+  color: var(--white-color);
+  align-self: flex-end;
+
+}
+.prices__list{
+  display: grid;
+  row-gap: 1rem;
+  padding: 1.5rem 1rem;
+}
+.prices__item{
+  display: flex;
+  column-gap: 0.25rem;
+  font-size: var(--small-font-size);
+}
+.prices__item i{
+  color: var(--first-color);
+  font-size: 1rem;
+}
+.prices__box{
+  display: grid;
+  width: 230px;
+  height: 100%;
+  background: linear-gradient(var(--dark-color), var(--dark-color)),
+              linear-gradient(225deg, var(--second-color), 0%, var(--dark-color) 25%);
+  
+  border:4px solid transparent;
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
+  position: absolute;
+  inset: 0;
+  margin-inline: auto;
+  border-radius: 1.5rem;
+  box-shadow: 0 8px 16px hsla(218, 94%, 45%, 0.2);
+  overflow: hidden;
+
+}
+.prices__box::after{
+  content: '';
+  width: 64px;
+  height: 64px;
+  background-color: var(--second-color);
+  border-radius: 50%;
+  position:absolute;
+  top: -0.3rem;
+  right: -0.3rem;
+  filter: blur(32px);
+
+}
+.prices__details{
+  color: var(--white-color);
+  font-size: var(--small-font-size);
+  text-align: center;
+  align-self: flex-end;
+  padding-bottom: 1.5rem;
+}
+
+
 
 
 /* Swiper class */
+.prices .swiper{
+  width: 320px;
+  overflow: initial;
+  padding-block: 2rem 5rem;
+}
+.prices :is(.swiper-slide-next, .swiper-slide-prev){
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .4s;
+}
+.prices .swiper-pagination-bullets.swiper-pagination-horizontal{
+  bottom: -4rem;
+}
+.prices .swiper-pagination-bullet{
+  width: 10px;
+  height: 10px;
+  background-color: var(--gray-color);
+  opacity: 1;
+  transition: background-color .4s;
+}
+.prices .swiper-pagination-bullet-active{
+  background-color: var(--first-color);
+}
 
 
 /*=============== WEBSITE GALLERY ===============*/
@@ -550,8 +731,23 @@ img {
 
 
 /*===============  WEBSITE BREAKPOINTS ===============*/
+
 /* For small devices */
-@media screen and (max-width: 1150px){
+@media  screen and (max-width: 360px){
+container{
+  margin-inline: 1rem;
+  
+ }  
+ .section__title{
+  font-size: 1.5rem;
+ } 
+ .prices .swiper{
+  width: 280px;
+ }
+}
+
+
+@media screen and (max-width: 330px){
   .home__title{
     font-size: 1.8rem;
   }
@@ -561,6 +757,14 @@ img {
   .delivery__image{
     width:270px;
   }
+  .about__container{
+    padding-inline: 1rem;
+  }
+  .prices .swiper{
+    width: 250px;
+  }
+ 
+
   
 }
 
@@ -596,8 +800,14 @@ img {
     grid-template-columns: 350px;
     justify-content: center;
   }
+  .about__container,
+  .prices__container{
+    width:350px;
+    margin-inline: auto;
 
   
+}
+
 }
 
 @media screen and (min-width: 768px) {
@@ -649,6 +859,38 @@ img {
  .delivery__data .delivery__description{
   text-align: center;
  }
+.about__container{
+ width: 700px; 
+ display: grid;
+ grid-template-columns: 1fr 1fr;
+ align-items: center; 
+}
+.about__data .section__title,
+.about__description{
+  text-align: initial;
+}
+.about__info{
+  justify-items: flex-start;
+}
+.about__stat{
+  padding-right: 1.5rem;
+}
+.about__button{
+  justify-self: flex-start;
+}
+.prices__container{
+  width: 700px;
+}
+.prices__description{
+  width: 540px;
+  margin-inline: auto;
+}
+.prices__box{
+  width: 460px;
+}
+.prices__content{
+  overflow-x: clip;
+}
 
 
 
@@ -765,6 +1007,67 @@ img {
 }
 .delivery__img{
   width:680px;
+}
+.delivery__description{
+  margin-bottom:3rem;
+}
+.delivery__subtile{
+  font-size: var(--normal-font-size);
+  margin-bottom: 0.75rem;
+}
+.about__container{
+  width: 1110px;
+  grid-template-columns: 440px 320px;
+  justify-content: center;
+  column-gap: 10rem;
+  padding-block: 3rem;
+
+}
+.about__stat{
+  padding-right: 2.5rem;
+
+}
+.about__number{
+  margin-bottom: 0.5rem;
+}
+.about__details{
+  font-size: var(--normal-font-size);
+}
+.about__img{
+  width: 300px;
+}
+.prices__container{
+  row-gap: 4rem;
+}
+.prices__box{
+  width: 700px;
+  border-radius: 2rem;
+}
+.prices__details{
+  font-size: var(--normal-font-size);
+  padding-bottom: 2.5rem;
+}
+.prices .swiper{
+  width: 460px;
+  padding-block: 2.5rem 7rem;
+}
+.prices__heading{
+  padding: 1.5rem
+}
+.prices__number{
+  font-size: var(--h1-font-size);
+}
+.prices__list{
+  padding: 2rem 1.5rem 3.5rem;
+  row-gap: 1rem;
+}
+.prices__item{
+  font-size: var(--normal-font-size);
+}
+.prices__box::after{
+  width: 100px;
+  height: 100px;
+  filter: blur(60px);
 }
   
 }
