--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -96,7 +96,12 @@ img {
 
 /*=============== WEBSITE THEME  ===============*/
 /*========== DARK THEME VARIABLE ==========*/
-
+.dark-theme{
+  --title-color: hsl(218, 48%, 95%);
+  --text-color: hsl(218, 24%, 75%);
+  --gray-color: hsl(218, 24%, 20%);
+  --body-color: hsl(218, 24%,8%);
+}
 
 /*========== 
 	Color changes in some parts of 
@@ -256,7 +261,9 @@ img {
   box-shadow: 0 2px 16px hsla(218, 68%, 18%, .1);
 }
 /* Active link */
-
+.active-link:hover{
+  color: var(--first-color);
+}
 
 /*=============== Website BUTTON ===============*/
 .button{
@@ -812,16 +819,112 @@ height: 100%;
 }
 
 /*=============== WEBSITE FOOTER ===============*/
-
-
+.footer{
+  padding-block: 3.5rem 2rem;
+}
+.footer__container{
+  row-gap: 2rem;
+}
+.footer__logo,
+.footer__links,
+.footer__social{
+  display: flex;
+}
+.footer__logo{
+  align-items: center;
+  justify-self: center;
+  column-gap: 4rem;
+  color: var(--title-color);
+  font-size: var(--h1-font-size);
+  margin-bottom: 1rem;
+  transition: color .4s;
+}
+.footer__logo i{
+  font-weight: initial;
+  font-size: 1.5rem;
+  color: var(--first-color);
+}
+.footer__logo:hover{
+  color: var(--first-color);
+}
+.footer__links{
+  justify-content: center;
+  column-gap:1rem;
+  margin-bottom:1rem;
+}
+.footer__link{
+  font-size: 0.95rem;
+  color: var(--title-color);
+  transition: color 0.4s;
+}
+.footer__link:hover{
+  color: var(--first-color);
+}
+.footer__social{
+  justify-content: center;
+  column-gap: 1rem;
+  margin-bottom: 1rem;
+}
+.footer__social-link{
+  font-size: 1.5rem;
+  color:var(--first-color);
+  transition: transform 0.4s;
+ 
+}
+.footer__social-link:hover{
+ transform: translateY(- 0.25rem)
+  
+}
+.footer__copy{
+  display: block;
+  margin-top: 5.5rem;
+  text-align: center;
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
+}
 /*=============== WEBSITE SCROLL BAR ===============*/
-
+::-webkit-scrollbar {
+  width: 0.6rem; /* Scrollbar width */
+  border-radius: 1rem;
+}
+::-webkit-scrollbar-track {
+  background-color: hsla(218, 16%, 90%, 1); /* Track (background) color */
+  border-radius: 1rem;
+}
+::-webkit-scrollbar-thumb {
+  background-color: hsla(218, 16%, 80%, 1); /* Thumb color */
+  border-radius: 1rem;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: hsla(218, 16%, 70%, 1); /* Darker on hover */
+}
 
 /*=============== WEBSITE SCROLL UP ===============*/
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--body-color);
+  box-shadow: 0 2px 16px hsla(218, 68%, 18%, .1);
+  color: var(--title-color);
+  display: inline-flex;
+  padding: 6px;
+  font-size: 1.25rem;
+  border-radius: 0.5rem;
+  z-index: var(--z-tooltip);
+  transition: bottom 0.4s, transform 0.4s, background-color 0.4s, color 0.4s;
 
+
+}
+.scrollup:hover{
+  transform: translateY(- 0.5rem);
+}
 
 /*  WEBSITE Show Scroll Up */
+.show-scroll{
+  bottom: 3rem;
 
+}
 
 /*===============  WEBSITE BREAKPOINTS ===============*/
 
@@ -928,6 +1031,10 @@ container{
   }
   .contact__map{
     width:100%;
+    gap: 0.75rem;
+  }
+  .footer__links{
+    column-gap: 1.5rem;
   }
  
 
@@ -1088,6 +1195,11 @@ container{
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   justify-items: flex-start;
+}
+.footer__container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
 }
 
 
@@ -1296,6 +1408,29 @@ container{
   border-radius: 2rem;
 
  }
+ .footer{
+  padding-top:6rem;
+ }
+.footer__container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+}
+.footer__logo{
+  margin-bottom: 0;
+  font-size: var(--h2-font-size);
+  justify-self: flex-start;
+}
+.footer__social{
+  justify-self: flex-end;
+}
+.footer__link{
+  font-size:var(--normal-font-size);
+}
+.scrollup{
+  right:3rem
+}
+
 
 
   
@@ -1314,3 +1449,8 @@ container{
 
 
 /* For 2K resolutions (2048 x 1152, 2048 x 1536) */
+@media screen and (min-width: 2048px){
+  body{
+    zoom: 1.3;
+  }
+}
