--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -403,6 +403,7 @@ img {
 
 .home__content {
   background-color: var(--first-color);
+  background-color: transparent;
   padding: 3rem 1.5rem 0 1rem;
   border-radius: 4rem;
   box-shadow: 0 8px 16px hsla(218, 94%, 45%, 0.2); /* Fixed: added comma before opacity */
@@ -572,13 +573,6 @@ img {
   justify-self: center;
   filter:drop-shadow(0 16px 24px hsla(218, 68%, 18%, .6))
 }
-
-
-
-
-
-
-
 
 /*=============== WEBSITE ABOUT ===============*/
 .about__container{
